--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
     "lint:es": "eslint . --ext ts,tsx,js"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.12",
-    "@mui/material": "^5.14.12",
+    "@nextui-org/react": "^2.1.13",
     "@reduxjs/toolkit": "^1.9.7",
     "@tippyjs/react": "^4.2.6",
+    "framer-motion": "^10.16.4",
+    "mongoose": "7.5.2",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
-    "react-redux": "^8.1.3",
-    "styled-components": "^6.0.8"
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.50.0",
     "eslint-config-next": "13.5.4",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5"
   }
 }
